--- a/SPE-website/pages/templates/pages/finalgallery.html
+++ b/SPE-website/pages/templates/pages/finalgallery.html
@@ -593,12 +593,12 @@ video {
                         <ul class="nav tm-category-list">
                             <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">All</a></li>
                             <li class="nav-item tm-category-item"><a href="/intern" class="nav-link tm-category-link">Intern Talk</a></li>
-                            <li class="nav-item tm-category-item"><a href="/fipi" class="nav-link tm-category-link">FIPI</a></li>
+                            <li class="nav-item tm-category-item"><a href="/fipi" class="nav-link tm-category-link">FIPI inductions</a></li>
                             <li class="nav-item tm-category-item"><a href="/teacher" class="nav-link tm-category-link">Teacher's Day</a></li>
                             <li class="nav-item tm-category-item"><a href="/basant" class="nav-link tm-category-link">Basant</a></li>
                             <li class="nav-item tm-category-item"><a href="/cdd" class="nav-link tm-category-link">Cloth Donation Drive</a></li>
-                            <li class="nav-item tm-category-item"><a href="/hall" class="nav-link tm-category-link">Hall n Fall</a></li>
-                            <li class="nav-item tm-category-item"><a href="/m" class="nav-link tm-category-link">SPE E-monitoring Session</a></li>
+                            <li class="nav-item tm-category-item"><a href="/hall" class="nav-link tm-category-link">Haul n Fall</a></li>
+                            <li class="nav-item tm-category-item"><a href="/m" class="nav-link tm-category-link">SPE eMentoring Session</a></li>
                         </ul>
                     </div>        
                 </div>
@@ -635,8 +635,8 @@ video {
                         </a>
                     </div>                            
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">FIPI</h3>                        
-                    </div>
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">FIPI inductions</h3>                        
+                    </div> 
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
@@ -668,7 +668,7 @@ video {
                         </a>
                     </div>                            
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Hall n Fall</h3>
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Haul n Fall</h3>
                     </div>
                 </div>
                  <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
@@ -679,7 +679,7 @@ video {
                         </a>
                     </div>    
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">SPE E-monitoring Session</h3>
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">SPE eMentoring Session</h3>
                         <!-- <p class="tm-catalog-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus bibendum orci sit amet dignissim rhoncus. Pellentesque pretium faucibus vestibulum.</p> -->
                     </div>
                 </div>
