--- a/SPE-website/pages/templates/pages/m.html
+++ b/SPE-website/pages/templates/pages/m.html
@@ -190,7 +190,7 @@ a.current_dot {
     <div class="left">
       <div>
         <span class="slider_imported">SPE IIT ISM Dhanbad</span>
-        <h1>SPE <br>E-monitoring <br>Session</h1>
+        <h1>SPE <br>eMentoring <br>Session</h1>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eveniet amet excepturi voluptates dolorem totam ad quod hic, porro accusamus, repellat, corrupti at obcaecati ducimus, dolor quibusdam sequi nemo inventore?</p> -->
         <a href="/Gallery" >Back To Gallery</a>
       </div>
