--- a/SPE-website/pages/templates/pages/finalgallery.html
+++ b/SPE-website/pages/templates/pages/finalgallery.html
@@ -635,7 +635,7 @@ video {
                         </a>
                     </div>                            
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">FIPI inductions</h3>                        
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">SPE inductions</h3>                        
                     </div> 
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
