--- a/SPE-website/pages/templates/pages/fipi.html
+++ b/SPE-website/pages/templates/pages/fipi.html
@@ -43,7 +43,7 @@ a {
 .left {
 	float: left;
 	height: 100%;
-	width: 20%;
+	width: 30%;
 	padding: 3rem 3rem 3rem 5rem;
 	display: table;
 }
@@ -77,7 +77,7 @@ p + a {
 .slider {
 	float: right;
 	position: relative;
-	width: 80%;
+	width: 70%;
 	height: 100%;
 }
 .slider li {
@@ -191,7 +191,7 @@ a.current_dot {
       <div>
         <br><br><br><br>
         <span class="slider_imported">SPE IIT ISM Dhanbad</span>
-        <h1>FIPI</h1>
+        <h1>SPE Induction</h1>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eveniet amet excepturi voluptates dolorem totam ad quod hic, porro accusamus, repellat, corrupti at obcaecati ducimus, dolor quibusdam sequi nemo inventore?</p> -->
         <a href="/Gallery" >Back To Gallery</a>
       </div>
