--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -507,7 +507,7 @@
                             </div>
                             <div class="count-text ">
                                 <p>Number of Lives</p>
-                                <h5>IMPACTED</h5>
+                                <h5>+ IMPACTED</h5>
                             </div>
                         </div>
                     </div>
