--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -399,7 +399,7 @@
 {% endblock content-blog %} {% block content %}
 <div style="padding-top:90px;"></div>
 <!-- Hero Header -->
-<div class="page-header" data-parallax="true" style="background-image: url(/media/bg-images/premium4.jpeg); height: 570px;">
+<div class="page-header" data-parallax="true" style="background-image: url(https://i.imgur.com/dkRP5jr.jpg); height: 570px;">
     <div class="container" style="text-align:center; overflow: hidden;">
         <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT (ISM) DHANBAD CHAPTER</span>
             <span class="text__second-bg"></span>
@@ -455,7 +455,7 @@
 
 <!-- Blogs Section -->
 
-<div class="container-fluid" style=" background-image: url(../../../media/bg-images/premium3.jpg) !important; background-repeat: no-repeat; background-size: cover;">
+<div class="container-fluid" style=" background-image: url(https://i.imgur.com/toNtkZs.jpg) !important; background-repeat: no-repeat; background-size: cover;">
     <div class="container" style="padding:5% 0;font-family: 'Dosis', sans-serif; overflow: hidden;">
         <p style="padding-bottom: 5%;font-size: 5rem; font-weight: 700; text-align: center; color: #fff;">BLOGS</p>
         <div class="post">
@@ -602,7 +602,7 @@
         <div class="row" id="mainwrapper" style="padding:2% 0%;padding-bottom: 10%;">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div id="box-1" class="box" style="left: 50px;">
-                    <a href="https://www.askeor.com/index.html"><img id="image-1" src="/media/about_images/askeor.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                    <a href="https://www.askeor.com/index.html"><img id="image-1" src="https://i.imgur.com/o1kYC4W.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
