--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -53,7 +53,7 @@
 </div>
 
 <!-- ACHIEVEMENTS OF THE CHAPTER -->
-<div class="parallax" style="background-image: url(../../../media/about_images/department.png) !important;
+<div class="parallax" style="background-image: url('https://i.imgur.com/U0aD07q.png') !important;
     height: auto;
     background-attachment: fixed;
     background-position: center;
