--- a/SPE-website/pages/templates/pages/landing-page.html
+++ b/SPE-website/pages/templates/pages/landing-page.html
@@ -10,12 +10,10 @@
 
         <div class="img-text">
             <h2>SPE IIT ISM STUDENT CHAPTER</h2>
-            <img class="" src="{% static 'pages/landingpage-bg/SPE-white-gif.gif' %}" style="height: 200px;">
+            <img class="" src="https://i.imgur.com/Cs5qS5L.gif" style="height: 200px;">
             <div class="text-case">
-                <p class="chapter-text">SPE IIT ISM DHANBAD STUDENT CHAPTER started its journey in 1984. This was the first
-                    student chapter at any Indian university and since then the chapter started a new way to connect with the
-                    students, industry, alumni, research fellow across the globe to gain an insight into the industry with a gulp
-                    of research essence.</p>
+                <p class="chapter-text">SPE IIT ISM DHANBAD STUDENT CHAPTER started its journey in 1984. This was the first student chapter at any Indian university and since then the chapter started a new way to connect with the students, industry, alumni, research fellow across
+                    the globe to gain an insight into the industry with a gulp of research essence.</p>
             </div>
 
             <div class="center" style="float: left; margin-left: 180px;">
