--- a/SPE-website/pages/templates/pages/tgal2.html
+++ b/SPE-website/pages/templates/pages/tgal2.html
@@ -38,7 +38,7 @@ a:hover {
     text-decoration: none;
 }
 
-/* h2, p { color: #666666; } */
+h2, p { color: #666666; }
 
 .tm-site-header {
     position: absolute;
