--- a/SPE-website/pages/static/pages/landingpage.css
+++ b/SPE-website/pages/static/pages/landingpage.css
@@ -1,7 +1,7 @@
 body {
     height: 98%;
-    background-image: url('https://i.imgur.com/qrpw3uX.jpg');
-    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://i.imgur.com/qrpw3uX.jpg');
+    background-image: url('https://i.pinimg.com/originals/82/bf/df/82bfdfc7888d04200b1e8843208eb5d5.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://i.pinimg.com/originals/82/bf/df/82bfdfc7888d04200b1e8843208eb5d5.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
