--- a/SPE-website/pages/templates/pages/landing-page.html
+++ b/SPE-website/pages/templates/pages/landing-page.html
@@ -5,6 +5,12 @@
 </head>
 
 <body>
+<style>
+    body {
+    background-image: url('https://i.pinimg.com/originals/82/bf/df/82bfdfc7888d04200b1e8843208eb5d5.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://i.pinimg.com/originals/82/bf/df/82bfdfc7888d04200b1e8843208eb5d5.jpg');
+    }
+</style>
 
     <div class="banner">
 
