--- a/SPE-website/user/templates/user/signup.html
+++ b/SPE-website/user/templates/user/signup.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+<style>
+    body {
+        background-image: url('https://i.pinimg.com/originals/6e/5a/91/6e5a912bcb0bb2543470143c73cf2c4b.jpg');
+    }
+</style>
 
     <div class="content-section mx-auto d-block" id="SignUpVert">
         <form method="POST">
