--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+<style>
+    body {
+        background-image: url('https://i.pinimg.com/originals/6e/5a/91/6e5a912bcb0bb2543470143c73cf2c4b.jpg');
+    }
+</style>
 
         <div class="content-section d-block mx-auto" id="SignInVert">
             <form method="POST">
