--- a/SPE-website/user/templates/user/signup.html
+++ b/SPE-website/user/templates/user/signup.html
@@ -17,7 +17,10 @@
 <body>
 <style>
     body {
-        background-image: url('https://i.pinimg.com/originals/6e/5a/91/6e5a912bcb0bb2543470143c73cf2c4b.jpg');
+        background-image: url('https://grist.org/wp-content/uploads/2014/09/frackingwell.jpg');
+        background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     }
 </style>
 
