--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -17,7 +17,7 @@
 <body>
 <style>
     body {
-        background-image: url('https://grist.org/wp-content/uploads/2014/09/frackingwell.jpg');
+        background-image: url('https://i.imgur.com/VWmBa4H.jpg');
         background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
