--- a/SPE-website/user/templates/user/signup.html
+++ b/SPE-website/user/templates/user/signup.html
@@ -22,6 +22,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     }
+
+    @media screen and (max-width:1200px) {
+    body {
+        background-image: url('https://imgur.com/4dygAcu');
+        font-size: 2em;
+        }
+    }
 </style>
 
     <div class="content-section mx-auto d-block" id="SignUpVert">
