--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -26,7 +26,9 @@
     @media screen and (max-width:1200px) {
     body {
         background-image: url('https://imgur.com/4dygAcu');
-        font-size: 2em;
+        background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
         }
     }
 </style>
