--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -25,7 +25,7 @@
 
     @media screen and (max-width:1200px) {
     body {
-        background-image: url('https://imgur.com/4dygAcu');
+        background-image: url('https://i.imgur.com/VWmBa4H.jpg');
         background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
