--- a/SPE-website/user/templates/user/signup.html
+++ b/SPE-website/user/templates/user/signup.html
@@ -25,7 +25,7 @@
 
     @media screen and (max-width:1200px) {
     body {
-        background-image: url('https://imgur.com/4dygAcu');
+        background-image: url('https://i.imgur.com/4dygAcu.jpg');
         font-size: 2em;
         }
     }
