--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -437,7 +437,7 @@
                                  <br> <a href="#">1. WELCOME TO THE OFFICIAL WEBSITE OF SPE IIT ISM STUDENT CHAPTER!</a><br><br>
                                  <br> <a href="#">2. We SPE IIT ISM Student Chapter give our heartiest welcome to the Freshers.
                                     With this we announce our Inductions for SPE and FIPI for batch 2020 is going to be held very soon.</a><br><br
-                                 <br> <a href="#">3. SPE IIT (ISM) and SPE TAMU jointly presents INTER-CHAPTER RESEARCH EXCHANGE.
+                                 <br> <a href="http://www.iitismspe.org/Events/Event/15/">3. SPE IIT (ISM) and SPE TAMU jointly presents INTER-CHAPTER RESEARCH EXCHANGE.
                                     Participants need to submit Abstract by 05/02/2021 in the given link. Click for more information.</a><br><br>
 
                                 </b></p>
