--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -435,7 +435,8 @@
                             <marquee direction="up" onmouseover="this.stop();" onmouseout="this.start(); " scrollamount="3">
                                 <p> <b>
                                  <br> <a href="#">1. WELCOME TO THE OFFICIAL WEBSITE OF SPE IIT ISM STUDENT CHAPTER!</a><br>
-                                 <br> <a href="#">2. Welcoming 2021 Batch! INDUCTIONS at 30th January 2021,
+                                 <br> <a href="https://us02web.zoom.us/j/83751133072?pwd=MWY1dVZ2d2F6Y0pqNEh2bEFIRWlzUT09">
+                                    2. Welcoming 2021 Batch! INDUCTIONS at 30th January 2021,
                                     5PM onwards- introductory sessions to SPE and IIT ISM Student Chapter.</a><br>
                                  <br> <a href="http://www.iitismspe.org/Events/Event/15/">3. SPE IIT (ISM) and SPE TAMU jointly presents INTER-CHAPTER RESEARCH EXCHANGE.
                                     Participants need to submit Abstract by 05/02/2021 in the given link. Click for more information.</a><br>
