--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -440,6 +440,7 @@
                                     5PM onwards- introductory sessions to SPE and IIT ISM Student Chapter.</a><br>
                                  <br> <a href="http://www.iitismspe.org/Events/Event/15/">3. SPE IIT (ISM) and SPE TAMU jointly presents INTER-CHAPTER RESEARCH EXCHANGE.
                                     Participants need to submit Abstract by 05/02/2021 in the given link. Click for more information.</a><br>
+                                 <br> <a href="#">4. The deadline for INTER-CHAPTER RESEARCH EXCHANGE has been extended till 12th February, 2021.</a><br>
                                 </b></p>
                             </marquee>
                             <br>
