--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -457,6 +457,32 @@
 
 <!-- Who we are and announcement section end-->
 
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_02f47"></div>
+  <div class="tradingview-widget-copyright"><a href="https://in.tradingview.com/symbols/TVC-USOIL/" rel="noopener" target="_blank"><span class="blue-text">USOIL Chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "width": 980,
+  "height": 610,
+  "symbol": "TVC:USOIL",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "dark",
+  "style": "1",
+  "locale": "in",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "container_id": "tradingview_02f47"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
+
 <!-- Blogs Section -->
 
 <div class="container-fluid" style=" background-image: url(https://i.imgur.com/toNtkZs.jpg) !important; background-repeat: no-repeat; background-size: cover;">
