USOIL chart added

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -453,20 +453,18 @@
         </div>
     </div>
 </div>
-
-
 <!-- Who we are and announcement section end-->
 
 <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
+<div class="tradingview-widget-container" style="padding: 30px;">
   <div id="tradingview_02f47"></div>
   <div class="tradingview-widget-copyright"><a href="https://in.tradingview.com/symbols/TVC-USOIL/" rel="noopener" target="_blank"><span class="blue-text">USOIL Chart</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "width": 980,
-  "height": 610,
+  "width": 75%,
+  "height": 47%,
   "symbol": "TVC:USOIL",
   "interval": "D",
   "timezone": "Etc/UTC",
