USOIL chart added

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -456,15 +456,16 @@
 <!-- Who we are and announcement section end-->
 
 <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container" style="padding: 30px;">
-  <div id="tradingview_02f47"></div>
+<div class="container" style="width: 75%; height: 27%; margin: 30px;">
+    <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_5eab7"></div>
   <div class="tradingview-widget-copyright"><a href="https://in.tradingview.com/symbols/TVC-USOIL/" rel="noopener" target="_blank"><span class="blue-text">USOIL Chart</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "width": 75%,
-  "height": 47%,
+  "autosize": true,
   "symbol": "TVC:USOIL",
   "interval": "D",
   "timezone": "Etc/UTC",
@@ -474,10 +475,11 @@
   "toolbar_bg": "#f1f3f6",
   "enable_publishing": false,
   "allow_symbol_change": true,
-  "container_id": "tradingview_02f47"
-}
+  "container_id": "tradingview_5eab7"
+    }
   );
   </script>
+    </div>
 </div>
 <!-- TradingView Widget END -->
 
