USOIL chart added

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -456,7 +456,7 @@
 <!-- Who we are and announcement section end-->
 
 <!-- TradingView Widget BEGIN -->
-<div class="container" style="width: 75%; height: 27%; margin: 30px;">
+<div class="container d-block mx-auto d-flex justify-content-center" style="width: 75%; height: auto; margin: 30px;">
     <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_5eab7"></div>
