--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -464,24 +464,26 @@
 <!-- Who we are and announcement section end-->
 <br><br>
 
+
 <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container desktop" style="margin: auto;">
+<div class="tradingview-widget-container desktop" style="margin: auto; margin-bottom: 50px;">
+    <h1 style="font-size: 3em; font-weight: 600; padding-bottom: 15px;">Oil Prices Chart:</h1>
   <div class="tradingview-widget-container__widget"></div>
   <div class="tradingview-widget-copyright"><a href="https://in.tradingview.com/markets/futures/" rel="noopener" target="_blank"><span class="blue-text">Commodities</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
   {
   "colorTheme": "dark",
-  "dateRange": "12M",
+  "dateRange": "3M",
   "showChart": true,
   "locale": "in",
   "largeChartUrl": "",
   "isTransparent": false,
   "showSymbolLogo": true,
   "width": "1000",
-  "height": "550",
+  "height": "720",
   "plotLineColorGrowing": "rgba(25, 118, 210, 1)",
   "plotLineColorFalling": "rgba(25, 118, 210, 1)",
-  "gridLineColor": "rgba(42, 46, 57, 1)",
+  "gridLineColor": "rgba(182, 182, 182, 0)",
   "scaleFontColor": "rgba(120, 123, 134, 1)",
   "belowLineFillColorGrowing": "rgba(33, 150, 243, 0.12)",
   "belowLineFillColorFalling": "rgba(33, 150, 243, 0.12)",
@@ -499,10 +501,19 @@
           "d": "Natural Gas"
         },
         {
+          "s": "TVC:USOIL"
+        },
+        {
           "s": "TVC:UKOIL"
         },
         {
-          "s": "TVC:USOIL"
+          "s": "NYMEX:RB1!"
+        },
+        {
+          "s": "NYMEX:YF1!"
+        },
+        {
+          "s": "CBOT:EH1!"
         }
       ],
       "originalTitle": "Commodities"
@@ -514,23 +525,24 @@
 <!-- TradingView Widget END -->
 
 <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container mobile" style="margin:auto;">
+<div class="tradingview-widget-container mobile" style="margin: auto; margin-bottom: 50px;">
+    <h1 style="font-size: 2em; font-weight: 600; padding-bottom: 5px;">Oil Prices Chart:</h1>
   <div class="tradingview-widget-container__widget"></div>
   <div class="tradingview-widget-copyright"><a href="https://in.tradingview.com/markets/futures/" rel="noopener" target="_blank"><span class="blue-text">Commodities</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
   {
   "colorTheme": "dark",
-  "dateRange": "12M",
+  "dateRange": "3M",
   "showChart": true,
   "locale": "in",
   "largeChartUrl": "",
   "isTransparent": false,
   "showSymbolLogo": true,
   "width": "360",
-  "height": "550",
+  "height": "700",
   "plotLineColorGrowing": "rgba(25, 118, 210, 1)",
   "plotLineColorFalling": "rgba(25, 118, 210, 1)",
-  "gridLineColor": "rgba(42, 46, 57, 1)",
+  "gridLineColor": "rgba(182, 182, 182, 0)",
   "scaleFontColor": "rgba(120, 123, 134, 1)",
   "belowLineFillColorGrowing": "rgba(33, 150, 243, 0.12)",
   "belowLineFillColorFalling": "rgba(33, 150, 243, 0.12)",
@@ -548,10 +560,19 @@
           "d": "Natural Gas"
         },
         {
+          "s": "TVC:USOIL"
+        },
+        {
           "s": "TVC:UKOIL"
         },
         {
-          "s": "TVC:USOIL"
+          "s": "NYMEX:RB1!"
+        },
+        {
+          "s": "NYMEX:YF1!"
+        },
+        {
+          "s": "CBOT:EH1!"
         }
       ],
       "originalTitle": "Commodities"
