--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -24,6 +24,14 @@
               <div class="grid-item">
                   <div class="container" >
                     <iframe frameborder="0" scrolling="no" width="320" height="240"
+                                src="https://drive.google.com/file/d/13EuJQKPfvI0hvbBTNiv1FasxcHp2qr9x/preview"></iframe>
+                    <div>Gazette 2021</div>
+                </div>
+              </div>
+
+              <div class="grid-item">
+                  <div class="container" >
+                    <iframe frameborder="0" scrolling="no" width="320" height="240"
                                 src="https://drive.google.com/file/d/1dqplmQ661ODcjdlNYwOfUeLjpvkg53Wl/preview"></iframe>
                     <div>Gazette 2020</div>
                 </div>
